Add a game over prompt

--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     <body>
         <div id="game-border" class="game-border">
             <canvas id="game-canvas" class="game-canvas"></canvas>
+            <div id="game-over" class="game-over hide">
+                <div class="game-over-heading"> 
+                    GAME OVER
+                </div>
+                <div class="game-over-text"> 
+                    Press [space] to restart
+                </div>
+            </div>
         </div>
     </body>
 </html>
